--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19
-	yarn_mappings=1.19+build.1
-	loader_version=0.14.6
+# https://fabricmc.net/develop
+minecraft_version=1.19
+loader_version=0.14.8
+
+# https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/
+parchment_version=1.18.2:2022.07.17
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+mod_version = 0.1.0
+maven_group = red.jackf
+archives_base_name = jacksserversidetweaks
 
 # Dependencies
-	fabric_version=0.55.1+1.19
+fabric_version=0.57.0+1.19
+rei_version=9.1.517
+modmenu_version=4.0.4
