--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,10 @@ parchment_version=1.18.2:2022.07.17
 # Mod Properties
 mod_version = 0.1.0
 maven_group = red.jackf
-archives_base_name = jacksserversidetweaks
+archives_base_name = jsst
 
 # Dependencies
 fabric_version=0.57.0+1.19
 rei_version=9.1.517
 modmenu_version=4.0.4
+jankson_version=4.1.1+j1.2.1
