--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,13 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.19
 loader_version=0.14.8
 
+game_versions=1.19
+
 # https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/
 parchment_version=1.18.2:2022.07.17
 
 # Mod Properties
-mod_version = 0.1.3
+mod_version = 0.1.4
 maven_group = red.jackf
 archives_base_name = jsst
 
