--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,22 @@
 org.gradle.jvmargs=-Xmx1G
 
 # https://fabricmc.net/develop
-minecraft_version=1.19
-loader_version=0.14.8
+minecraft_version=1.19.4
+loader_version=0.14.18
 
-game_versions=1.19
+game_versions=1.19.4
 
 # https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/
-parchment_version=1.18.2:2022.07.17
+parchment_version=1.19.3:2023.03.12
 
 # Mod Properties
-mod_version = 0.1.5
+mod_version = 0.2.0
 maven_group = red.jackf
 archives_base_name = jsst
 
 # Dependencies
-fabric_version=0.57.0+1.19
-rei_version=9.1.517
-modmenu_version=4.0.4
-jankson_version=4.1.1+j1.2.1
+fabric_version=0.76.0+1.19.4
+rei_version=11.0.597
+emi_version=0.7.2+1.19.4
+modmenu_version=5.0.2
+jankson_version=5.0.1+j1.2.2
