--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@ archives_base_name = jsst
 fabric_version=0.76.0+1.19.4
 rei_version=11.0.597
 emi_version=0.7.2+1.19.4
-modmenu_version=5.0.2
+modmenu_version=6.1.0-rc.4
 jankson_version=5.0.1+j1.2.2
