--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'fabric-loom' version '1.1-snapshot'
-	id 'io.github.juuxel.loom-quiltflower' version '1.9.0'
+	id 'fabric-loom' version '1.1-SNAPSHOT'
+	id 'io.github.juuxel.loom-quiltflower' version '1.8.0'
 	id "com.modrinth.minotaur" version "2.+"
 	id 'maven-publish'
 }
