--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
 	id 'fabric-loom' version '1.1-SNAPSHOT'
 	id 'io.github.juuxel.loom-quiltflower' version '1.8.0'
+
+	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id "com.modrinth.minotaur" version "2.+"
 	id 'maven-publish'
 }
@@ -92,6 +94,35 @@ java {
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
+	}
+}
+
+curseforge {
+	if (project.hasProperty("cf.key")) {
+		apiKey = project.findProperty("cf.key")
+		project {
+			id = "4491331"
+			changelog = "Check the GitHub for changes: https://github.com/JackFred2/JacksServerSideTweaks"
+			releaseType = "beta"
+
+			addGameVersion "Fabric"
+			addGameVersion "Quilt"
+			addGameVersion "Java 17"
+
+			project.game_versions.tokenize(",").each { addGameVersion it }
+
+			mainArtifact(remapJar) {
+				relations {
+					requiredDependency("fabric-api")
+				}
+				displayName = "${project.prefix} ${archivesBaseName}-${version}.jar"
+			}
+
+		}
+
+		options {
+			forgeGradleIntegration = false
+		}
 	}
 }
 
