--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,14 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.19.4
 loader_version=0.14.18
 
+prefix = [1.19.4]
 game_versions=1.19.4
 
 # https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/
 parchment_version=1.19.3:2023.03.12
 
 # Mod Properties
-mod_version = 0.2.10
+mod_version = 0.2.11
 maven_group = red.jackf
 archives_base_name = jsst
 
