--- a/build.gradle
+++ b/build.gradle
@@ -62,8 +62,8 @@ dependencies {
 	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}"
 	// modLocalRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 
-	modCompileOnly "dev.emi:emi:${project.emi_version}:api"
-	modLocalRuntime "dev.emi:emi:${project.emi_version}"
+	//modCompileOnly "dev.emi:emi:${project.emi_version}:api"
+	//modLocalRuntime "dev.emi:emi:${project.emi_version}"
 
 	modImplementation "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
 	include "io.github.cottonmc:Jankson-Fabric:${project.jankson_version}"
