--- a/gradle.properties
+++ b/gradle.properties
@@ -2,23 +2,22 @@
 org.gradle.jvmargs=-Xmx1G
 
 # https://fabricmc.net/develop
-minecraft_version=1.19.4
-loader_version=0.14.19
+minecraft_version=1.20
+loader_version=0.14.21
 
-prefix = [1.19.4]
-game_versions=1.19.4
+prefix = [1.20.x]
+game_versions=1.20,1.20.1
 
 # https://ldtteam.jfrog.io/ui/native/parchmentmc-public/org/parchmentmc/data/
 parchment_version=1.19.3:2023.03.12
 
 # Mod Properties
-mod_version = 0.3.11
+mod_version = 0.3.12
 maven_group = red.jackf
 archives_base_name = jsst
 
 # Dependencies
-fabric_version=0.78.0+1.19.4
-rei_version=11.0.597
-emi_version=0.7.2+1.19.4
-modmenu_version=6.1.0-rc.4
+fabric_version=0.83.0+1.20
+rei_version=12.0.624
+modmenu_version=7.0.1
 jankson_version=5.0.1+j1.2.2
