[feat] initial beacon power feature

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ archives_base_name=jsst
 
 # Dependencies
 server_translations_api_version=2.2.0+1.20.3-rc1
+sgui_version=1.4.0+1.20.4
 jflib_base_version=1.2.0+1.20.4
 jflib_config_version=0.2.3+1.20.4
 jflib_colour_version=1.0.3+1.20.4
