--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-parchment_version=1.20.2:2023.10.22
-loader_version=0.15.3
+minecraft_version=1.20.6
+parchment_version=1.20.6:2024.05.01
+loader_version=0.15.11
 
 # Mod Properties
 mod_version=1.0.0
@@ -14,17 +14,17 @@ maven_group=red.jackf
 archives_base_name=jsst
 
 # Dependencies
-server_translations_api_version=2.2.0+1.20.3-rc1
-sgui_version=1.4.2+1.20.4
-jflib_base_version=1.3.2+1.20.4
-jflib_config_version=0.2.3+1.20.4
-jflib_colour_version=1.1.0+1.20.4
+server_translations_api_version=2.3.0+1.20.5-rc2
+sgui_version=1.5.1+1.20.5
+jflib_base_version=1.4.0+1.20.5
+jflib_config_version=0.2.3+1.20.5
+jflib_colour_version=1.1.0+1.20.5
 jflib_lying_version=0.5.5+1.20.4
 
 # JF_AUTO_UPDATE_BLOCK
-fabric-api_version=0.96.11+1.20.4
-modmenu_version=9.0.0
-emi_version=1.1.3+1.20.4
+fabric-api_version=0.98.0+1.20.6
+modmenu_version=10.0.0-beta.1
+emi_version=1.1.6+1.20.6
 # JF_END_AUTO_UPDATE_BLOCK
 
 # Publishing
