--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ deps.fabric_loader=0.16.5
 deps.minecraft=[VERSIONED]
 deps.fabric_api=[VERSIONED]
 deps.yacl=[VERSIONED]
+deps.jackfredlib=[VERSIONED]
