--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -4,3 +4,4 @@ deps.parchment=1.21:2024.07.28
 deps.fabric_api=0.105.0+1.21.1
 deps.modmenu=11.0.2
 deps.yacl=3.5.0+1.21-fabric
+deps.jackfredlib=0.10.2+1.21.1
