--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ archive_name=jsst
 mod_version=2.0.0
 
 deps.fabric_loader=0.16.5
+deps.mixinextras=0.5.0-beta.3
 
 # Stonecutter
 deps.minecraft=[VERSIONED]
