[feat] banner writer

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ deps.minecraft=[VERSIONED]
 deps.fabric_api=[VERSIONED]
 deps.yacl=[VERSIONED]
 deps.jackfredlib=[VERSIONED]
+deps.servertranslations=[VERSIONED]
