--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -5,3 +5,4 @@ deps.fabric_api=0.92.2+1.20.1
 deps.modmenu=7.2.2
 deps.yacl=3.5.0+1.20.1-fabric
 deps.jackfredlib=0.10.2+1.20.1
+deps.servertranslations=2.0.0+1.20
