[internal] setup item editor

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ deps.fabric_api=[VERSIONED]
 deps.yacl=[VERSIONED]
 deps.jackfredlib=[VERSIONED]
 deps.servertranslations=[VERSIONED]
+deps.sgui=[VERSIONED]
