--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -6,3 +6,4 @@ deps.modmenu=7.2.2
 deps.yacl=3.5.0+1.20.1-fabric
 deps.jackfredlib=0.10.2+1.20.1
 deps.servertranslations=2.0.0+1.20
+deps.sgui=1.6.0+1.21
