--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -6,3 +6,4 @@ deps.modmenu=11.0.2
 deps.yacl=3.5.0+1.21-fabric
 deps.jackfredlib=0.10.2+1.21.1
 deps.servertranslations=2.3.1+1.21-pre2
+deps.sgui=1.6.1+1.21.1
